// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[ atoms / Button ] #Button when 'Button' AddonAppend is mounted should render 1`] = `
<DocumentFragment>
  <button
    class="button type-primary"
  >
    <h1
      class="heading color-inverted size-md weight-bold is-centered is-inline"
    >
      You Shall Not Pass!
    </h1>
    But ill-tempered Thengel.
  </button>
</DocumentFragment>
`;

exports[`[ atoms / Button ] #Button when 'Button' AddonPrepend is mounted should render 1`] = `
<DocumentFragment>
  <button
    class="button type-primary"
  >
    Dare Erebor forgive most.
    <h1
      class="heading color-inverted size-md weight-bold is-centered is-inline"
    >
      You Shall Not Pass!
    </h1>
  </button>
</DocumentFragment>
`;

exports[`[ atoms / Button ] #Button when 'Button' Default is mounted should render 1`] = `
<DocumentFragment>
  <button
    class="button type-primary"
  >
    <h1
      class="heading color-inverted size-md weight-bold is-centered"
    >
      You Shall Not Pass!
    </h1>
  </button>
</DocumentFragment>
`;

exports[`[ atoms / Button ] #Button when 'Button' Inline is mounted should render 1`] = `
<DocumentFragment>
  <button
    class="button type-primary is-inline"
  >
    <h1
      class="heading color-inverted size-md weight-bold is-centered"
    >
      You Shall Not Pass!
    </h1>
  </button>
</DocumentFragment>
`;

exports[`[ atoms / Button ] #Button when 'Button' Muted is mounted should render 1`] = `
<DocumentFragment>
  <button
    class="button type-primary is-muted"
  >
    <h1
      class="heading color-inverted size-md weight-bold is-centered"
    >
      You Shall Not Pass!
    </h1>
  </button>
</DocumentFragment>
`;

exports[`[ atoms / Button ] #Button when 'Button' Types is mounted should render 1`] = `
<DocumentFragment>
  <button
    class="button type-primary"
  >
    <h1
      class="heading color-inverted size-md weight-bold is-centered"
    >
      You Shall Not Pass!
    </h1>
  </button>
  <button
    class="button type-secondary"
  >
    <h1
      class="heading color-primary size-md weight-bold is-centered"
    >
      You Shall Not Pass!
    </h1>
  </button>
  <button
    class="button type-tertiary is-inline"
  >
    <h1
      class="heading color-primary size-md weight-bold is-centered"
    >
      You Shall Not Pass!
    </h1>
  </button>
</DocumentFragment>
`;
